Use ``...'' in running text instead of "..." (only to be used in code)

--- a/TODO
+++ b/TODO
@@ -25,7 +25,7 @@ Things to fix before submitting
 * Use \toprule, \midrule, \bottomrule in tables                             OK
 * Linebreaks in chapter titles                                              OK
 * Use of double quotes instead of single quote in code, including Python   (AL)
-* Use of "..." vs ``...''                                                  (AL)
+* Use of "..." vs ``...''                                                   OK
 * Complete Springer questionnaire                                          (eds)
 * Read through first part of all chapters                                  (eds)
 * Browse through entire book and look for obvious problems                 (eds)
