Change use of ' in all code examples to "

--- a/TODO
+++ b/TODO
@@ -24,7 +24,7 @@ Things to fix before submitting
 * Check order of references when referring to multiple chapters             OK
 * Use \toprule, \midrule, \bottomrule in tables                             OK
 * Linebreaks in chapter titles                                              OK
-* Use of double quotes instead of single quote in code, including Python   (AL)
+* Use of double quotes instead of single quote in code, including Python    OK
 * Use of "..." vs ``...''                                                   OK
 * Complete Springer questionnaire                                          (eds)
 * Read through first part of all chapters                                  (eds)
