--- a/TODO
+++ b/TODO
@@ -26,10 +26,11 @@ Things to fix before submitting
 * Linebreaks in chapter titles                                              OK
 * Use of double quotes instead of single quote in code, including Python    OK
 * Use of "..." vs ``...''                                                   OK
-* Complete Springer questionnaire                                          (eds)
+* Complete Springer questionnaire                                           OK
 * Read through first part of all chapters                                  (eds)
 * Browse through entire book and look for obvious problems                 (eds)
 * Run final check: check.sh, proofread.sh, spellcheck.sh                   (AL)
+* Submit to Springer                                                       (AL)
 
 Things to fix by editors after submitting
 -----------------------------------------
@@ -44,6 +45,7 @@ Things to be checked by Springer during proofreading
 * Check typesetting of units, should not be italics: $x.y\,\mathrm{unit}$   xx
 * Check references                                                          xx
 * Check for callouts to all floats                                          xx
+* Make entire Part II fit on first page of table of contents                xx
 
 Things to fix by authors when reading proofs from Springer
 ----------------------------------------------------------
