--- a/book.tex
+++ b/book.tex
@@ -35,7 +35,7 @@
 
 %------------------------------------------------------------------------------
 % For testing
-%\fenicsinput{hoffman-2}\end{document}
+%\fenicsinput{kirby-6}\end{document}
 
 %------------------------------------------------------------------------------
 % Chapters
