Reduce size of some figs

--- a/book.tex
+++ b/book.tex
@@ -35,7 +35,10 @@
 
 %------------------------------------------------------------------------------
 % For testing
-%\fenicsinput{kirby-6}\end{document}
+%\fenicsinput{alnes-3}
+%\bibliography{bibliography}
+%\bibliographystyle{abbrvnat}
+%\end{document}
 
 %------------------------------------------------------------------------------
 % Chapters
