Some fenics url updates.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -12,11 +12,11 @@
 }
 
 @Article{Mortensen2011,
-  Author         = {M. Mortensen and H. P. Langtangen and G. N. Wells},
+  Author = {M. Mortensen and H. P. Langtangen and G. N. Wells},
   Title = {A {FEniCS}-Based Programming Framework for Modeling Turbulent
   Flow by the {Reynolds}-Averaged {Navier-Stokes} Equations},
-  Journal        = {Advances in Water Resources},
-  year           = 2011,
+  Journal = {Advances in Water Resources},
+  year = {2011},
   url = {http://dx.doi.org/10.1016/j.advwatres.2011.02.013},
 }
 
@@ -477,31 +477,14 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
   author = {M. Aln\ae{}s and H. P. Langtangen and A. Logg and K.-A. Mardal and
 	O. Skavhaug},
   year = {2007},
-  url = {http://www.fenics.org/ufc/}
-}
-
-@MANUAL{AlnaesMardal2006,
-  title = {{S}y{F}i},
-  author = {M. Aln\ae{}s and Kent-Andre Mardal},
-  year = {2006},
-  url = {http://www.fenics.org/syfi/}
-}
-
-@MISC{www:ufc,
-  author = {M. S. Aln\ae{}s and H.-P. Langtangen and A. Logg and K.-A. Mardal
-	and O. Skavhaug},
-  title = { {UFC} },
-  year = {2009},
-  url = {http://www.fenics.org/ufc/}
+  url = {http://www.fenicsproject.org}
 }
 
 @MANUAL{AlnaesLogg2009,
   title = {{UFL} Specification and User Manual},
   author = {M. S. Aln\ae{}s and A. Logg},
   year = {2009},
-  owner = {logg},
-  timestamp = {2009.06.07},
-  url = {http://www.fenics.org/ufl/}
+  url = {http://www.fenicsproject.org}
 }
 
 @ARTICLE{AlnaesLoggMardalEtAl2009,
@@ -513,29 +496,6 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
   note = {Accepted for publication. Preprint: \url{http://simula.no/research/scientific/publications/Simula.SC.96}},
   owner = {logg},
   timestamp = {2009.06.07}
-}
-
-@MANUAL{AlnaesMardal2009,
-  title = {{SyFi} User Manual},
-  author = {M. S. Aln\ae{}s and K.-A. Mardal},
-  year = {2009},
-  owner = {logg},
-  timestamp = {2009.06.07},
-  url = {http://www.fenics.org/syfi/}
-}
-
-@MISC{www:syfi,
-  author = {M. S. Aln\ae{}s and K.-A. Mardal},
-  title = { {SyFi} },
-  year = {2009},
-  url = {http://www.fenics.org/syfi/}
-}
-
-@MISC{Alnaes2009,
-  author = {M. S. Aln{\ae}s},
-  title = {{UFL}: },
-  year = {2009},
-  url = {http://fenics.org/ufl}
 }
 
 @ARTICLE{AlnaesMardal2009b,
@@ -555,16 +515,7 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
   title = {{SyFi}},
   author = {Aln{\ae}s, M. S. and K.-A. Mardal},
   year = {2009},
-  owner = {logg},
-  timestamp = {2009.06.06},
-  url = {http://www.fenics.org/wiki/SyFi/}
-}
-
-@MISC{UFC,
-  author = {M. S. Aln{\ae}s and others},
-  title = {{UFC}: },
-  year = {2009},
-  url = {http://fenics.org/ufc}
+  url = {http://www.fenicsproject.org}
 }
 
 @ARTICLE{AlperinMazdaLichtorEtAl2006,
@@ -4401,28 +4352,22 @@ year = "2006"
  url = {http://dx.doi.org/10.1145/1644001.1644006},
 }
 
-@UNPUBLISHED{Kirbya,
-  author = {Robert C. Kirby},
-  title = {{FE}rari},
-  note = {\url{http://www.fenics.org/ferari/}},
-  key = {{FE}rari},
-  timestamp = {2010.02.16}
-}
-
 @MANUAL{Kirby2006,
   title = {{FIAT}},
   author = {R. C. Kirby},
   year = {2006},
-  owner = {logg},
-  timestamp = {2009.06.06},
-  url = {http://www.fenics.org/fiat/}
+  url = {http://www.fenicsproject.org}
 }
 
 @ARTICLE{Kirby2011,
   author = {R. C. Kirby},
-  title = {Fast simplicial finite element algorithms using Bernstein polynomials},
+  title = {Fast simplicial finite element algorithms using Bernstein
+  polynomials},
   journal = {Numerische Matematik},
-  year = {2011}
+  year = {2011},
+  pages = {631--652},
+  volume = {117},
+  url = {http://dx.doi.org/10.1007/s00211-010-0327-2},
 }
 
 @ARTICLE{Kirby2010,
@@ -4432,6 +4377,7 @@ year = "2006"
   volume={52},
   pages={269--293},
   year = {2010},
+  url = {http://dx.doi.org/10.1137/070706914}
 }
 
 @ARTICLE{Kirby2006a,
@@ -4941,22 +4887,6 @@ author = {Hans Petter Langtangen and Geir Pedersen}
  pages   = {283--295}
 }
 
-@MANUAL{manual:ffc,
-  title = {{FFC} User Manual},
-  author = {A. Logg},
-  year = {2009},
-  url = {http://www.fenics.org/ffc/}
-}
-
-@MANUAL{Logg2007d,
-  title = {{FFC} User Manual},
-  author = {A. Logg},
-  year = {2007},
-  owner = {logg},
-  timestamp = {2009.06.06},
-  url = {http://www.fenics.org/ffc/}
-}
-
 @ARTICLE{Logg2004,
   author = {Anders Logg},
   title = {Multi-Adaptive Time-Integration},
@@ -4974,7 +4904,7 @@ author = {Hans Petter Langtangen and Geir Pedersen}
   year = {2009},
   owner = {kent-and},
   timestamp = {2009.06.08},
-  url = {http//www.fenics.org/hg/exterior}
+  url = {http://www.fenicsproject.org}
 }
 
 @INBOOK{LoggMardalAlnaesEtAl2007,
@@ -4984,23 +4914,6 @@ author = {Hans Petter Langtangen and Geir Pedersen}
   editor = {D. A. Bader},
   author = {A. Logg and K.-A. Mardal and M. S. Alnaes and H. P. Langtangen and
 	O. Skavhaug},
-  isbn = {978-1584889090},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@MISC{FFC,
-  author = {A.~Logg and others},
-  title = {{FFC}: },
-  year = {2009},
-  url = {http://fenics.org/ffc}
-}
-
-@MISC{www:ffc,
-  author = {A. Logg and others},
-  title = { {FFC} },
-  year = {2009},
-  url = {http://www.fenics.org/ffc/}
 }
 
 @ARTICLE{LoggWells2010,
@@ -5258,20 +5171,6 @@ journal = {Proceedings of the Royal Society of London. Series A: Mathematical, P
   volume = {40},
   pages = {1605--1631},
   number = {5}
-}
-
-@MISC{MardalAlnaes2009,
-  author = {K.-A. Mardal and M. S. Aln{\ae}s},
-  title = {{SFC}: },
-  year = {2009},
-  url = {http://fenics.org/sfc}
-}
-
-@MISC{MardalAlnaes2009a,
-  author = {K.-A.~Mardal and M. S. Aln{\ae}s},
-  title = {{SyFi}: },
-  year = {2009},
-  url = {http://fenics.org/syfi}
 }
 
 @ARTICLE{MardalHentchelMyklebustEtAl2010,
@@ -7583,13 +7482,6 @@ journal = {Proceedings of the Royal Society of London. Series A: Mathematical, P
   author = {Wesseling, P.},
 }
 
-@MISC{WestlieMardalAlnaes2009,
-  author = {M. Westlie and K.-A. Mardal and M. S. Aln{\ae}s},
-  title = {{Instant}: Inlining of {C/C++} in {Python}},
-  year = {2009},
-  url = {http://fenics.org/instant}
-}
-
 @ARTICLE{WhaleyPetitetDongarra2001,
   author = {R. Clint Whaley and Antoine Petitet and Jack J. Dongarra},
   title = {Automated Empirical Optimization of Software and the {ATLAS} Project},
@@ -7812,34 +7704,6 @@ journal = {Proceedings of the Royal Society of London. Series A: Mathematical, P
   number = {2},
 }
 
-@BOOK{ArgeBruasetEtAl1997,
-  title = {Modern Software Tools for Scientific Computing},
-  publisher = {Birkh\"auser},
-  year = {1997},
-  editor = {S. E. Arge and A. M. Bruaset and H. P. Langtangen},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@ELECTRONIC{cfd-online,
-  title = {http://www.cfd-online.com/Links/soft.html},
-  url = {http://www.cfd-online.com/Links/soft.html}
-}
-
-@ELECTRONIC{featflow,
-  title = {FEATFLOW, http://www.featflow.de},
-  url = {http://www.featflow.de/}
-}
-
-@ELECTRONIC{FEniCS,
-  title = {The FEniCS project (http://www.fenics.org)},
-  url = {http://www.fenics.org}
-}
-
-@ELECTRONIC{OpenFOAM,
-  title = {OpenFOAM $\textregistered$: The Open Source CFD Toolbox (http://www.opencfd.co.uk/openfoam/)},
-  url = {http://www.opencfd.co.uk/openfoam/}
-}
 
 @UNPUBLISHED{PythonTutorial,
   title = {The Python Tutorial},
@@ -7847,11 +7711,6 @@ journal = {Proceedings of the Royal Society of London. Series A: Mathematical, P
   key = {The Python Tutorial}
 }
 
-@UNPUBLISHED{rh,
-  title = {{Rikshospitalet}},
-  url = {http://www.rikshospitalet.no/},
-  key = {Rikshospitalet}
-}
 
 @UNPUBLISHED{Siloon,
   title = {{SILOON}, scripting interface languages for object-oriented
@@ -7906,51 +7765,12 @@ journal = {Proceedings of the Royal Society of London. Series A: Mathematical, P
   url = {http://www.dune-project.org}
 }
 
-@UNPUBLISHED{www:featflow,
-  title = {{FEATFLOW} software package},
-  key = {{FEATFLOW} software package},
-  owner = {logg},
-  timestamp = {2009.06.06},
-  url = {http://www.featflow.de}
-}
-
-@UNPUBLISHED{www:fenics,
-  title = {{FEniCS} software collection},
-  key = {{FEniCS}},
-  owner = {logg},
-  timestamp = {2009.06.06},
-  url = {http://www.fenics.org}
-}
-
 @UNPUBLISHED{www:hypre,
   title = {software package},
   author = {Hypre},
   owner = {logg},
   timestamp = {2009.06.06},
   url = {http://www.llnl.gov/CASC/hypre/}
-}
-
-@UNPUBLISHED{www:mercurial,
-  title = {Mercurial software package},
-  key = {Mercurial software package},
-  timestamp = {2009.06.06},
-  url = {http://www.selenic.com/mercurial/wiki}
-}
-
-@UNPUBLISHED{www:mouse,
-  title = {{Mouse} software package},
-  key = {{Mouse} software package},
-  owner = {logg},
-  timestamp = {2009.06.06},
-  url = {http://fire8.vug.uni-duisburg.de/MOUSE/}
-}
-
-@UNPUBLISHED{www:netlib,
-  title = {Netlib repository of numerical software},
-  key = {Netlib repository of numerical software},
-  owner = {logg},
-  timestamp = {2009.06.06},
-  url = {http://www.netlib.org}
 }
 
 @UNPUBLISHED{www:numpy,
@@ -7993,22 +7813,6 @@ journal = {Proceedings of the Royal Society of London. Series A: Mathematical, P
   url = {http://pkg-config.freedesktop.org}
 }
 
-@UNPUBLISHED{www:pymat,
-  title = {PyMat {Python-Matlab} interface},
-  key = {PyMat {Python-Matlab} interface},
-  owner = {logg},
-  timestamp = {2009.06.06},
-  url = {http://claymore.engineer.gvsu.edu/~steriana/Python}
-}
-
-@UNPUBLISHED{www:pyrex,
-  title = {{Pyrex} -- a {L}anguage for {W}riting {P}ython {E}xtension {M}odules},
-  key = {{Pyrex} -- a {L}anguage for {W}riting {P}ython {E}xtension {M}odules},
-  owner = {logg},
-  timestamp = {2009.06.06},
-  url = {http://www.cosc.canterbury.ac.nz/greg.ewing/python/Pyrex}
-}
-
 @UNPUBLISHED{www:python-capi,
   title = {{Python C API Reference Manual}},
   key = {Python C-API},
@@ -8021,12 +7825,6 @@ journal = {Proceedings of the Royal Society of London. Series A: Mathematical, P
   url   = {http://docs.python.org/library/distutils.html}
 }
 
-@UNPUBLISHED{www:python-extending,
-  title = {Extending and Embedding the Python Interpreter},
-  key = {Extending Python},
-  url = {http://docs.python.org/extending}
-}
-
 @UNPUBLISHED{www:trilinos,
   title = {software package},
   author = {{Trilinos}},
@@ -8035,21 +7833,11 @@ journal = {Proceedings of the Royal Society of London. Series A: Mathematical, P
   url = {http://trilinos.sandia.gov/}
 }
 
-@UNPUBLISHED{www:ug,
-  title = {{UG} software package},
-  key = {{UG} software package},
-  owner = {logg},
-  timestamp = {2009.06.06},
-  url = {http://cox.iwr.uni-heidelberg.de/~ug/}
-}
-
 @UNPUBLISHED{www:vmtk,
   title = {software package},
   author = {VMTK},
   url = {http://www.vmtk.org}
 }
-
-
 
 @UNPUBLISHED{www:vtk,
   title = {software package},
@@ -8066,13 +7854,6 @@ journal = {Proceedings of the Royal Society of London. Series A: Mathematical, P
   url = {http://boost.org}
 }
 
-@OTHER{OpenMP,
-  key = {OpenMP Application Program Interface},
-  title = {{OpenMP} Application Program Interface},
-  url = {http://openmp.org},
-  year = {2009}
-}
-
 @UNPUBLISHED{www:top500,
   title = {Top500 Supercomputing Sites},
   month = {November},
@@ -8087,47 +7868,52 @@ journal = {Proceedings of the Royal Society of London. Series A: Mathematical, P
   title = {Mantle dynamics past, present and future: an introduction and overview},
   author={D. Bercovici},
   booktitle = {Mantle dynamics},
-editor={D. Bercovici},
-year = {2009},
-volume = {7},
-series = {Treatise on geophysics},
-pages = {1-30}}
+  editor={D. Bercovici},
+  year = {2009},
+  volume = {7},
+  series = {Treatise on geophysics},
+  pages = {1--30}
+}
 
 @Inbook{Ricard2009,
-title = {Physics of mantle convection},
-author={Y. Ricard},
-booktitle = {Mantle dynamics},
-editor={D. Bercovici},
-year = {2009},
-volume = {7},
-series = {Treatise on geophysics},
-pages = {1-30}}
+  title = {Physics of mantle convection},
+  author={Y. Ricard},
+  booktitle = {Mantle dynamics},
+  editor={D. Bercovici},
+  year = {2009},
+  volume = {7},
+  series = {Treatise on geophysics},
+  pages = {1-30}
+}
 
 @Inbook{Tackley2009,
-title = {Mantle geochemical geodynamics},
-author={P. Tackley},
-booktitle = {Mantle dynamics},
-editor={D. Bercovici},
-year = {2009},
-volume = {7},
-series = {Treatise on geophysics},
-pages = {1-30}}
+  title = {Mantle geochemical geodynamics},
+  author={P. Tackley},
+  booktitle = {Mantle dynamics},
+  editor={D. Bercovici},
+  year = {2009},
+  volume = {7},
+  series = {Treatise on geophysics},
+  pages = {1-30}
+}
 
 @Article{TanGurnis2005,
-title = {Metastable superplumes and mantle compressibility},
-author = {E. Tan and M. Gurnis},
-journal = {Geophys. Res. Lett.},
-volume = {32},
-year = 2005,
-pages = {1-4}}
+  title = {Metastable superplumes and mantle compressibility},
+  author = {E. Tan and M. Gurnis},
+  journal = {Geophys. Res. Lett.},
+  volume = {32},
+  year = 2005,
+  pages = {1-4}
+}
 
 @Article{McNamaraZhong2005,
-author={A. K. McNamara and S. Zhong},
-year = {2005},
-title = {Thermochemical structures beneath {A}frica and the {P}acific {O}cean},
-journal = {Nature},
-volume = {437},
-pages = {1136-1139}}
+  author={A. K. McNamara and S. Zhong},
+  year = {2005},
+  title = {Thermochemical structures beneath {A}frica and the {P}acific {O}cean},
+  journal = {Nature},
+  volume = {437},
+  pages = {1136-1139}
+}
 
 @Article{McNutt1998,
 author = {M. K. McNutt},
@@ -8146,12 +7932,12 @@ year = {2010}
 }
 
 @Article{McNamara2010,
-title = {Tracking deep mantle reservoirs with ultra-low velocity zones},
-author = {A. K. McNamara and Edward J. Garnero and S. Rost},
-journal = {Earth and Planetry Science Letters},
-volume = {299},
-year = {2010},
-pages = {1--9}
+  title = {Tracking deep mantle reservoirs with ultra-low velocity zones},
+  author = {A. K. McNamara and Edward J. Garnero and S. Rost},
+  journal = {Earth and Planetry Science Letters},
+  volume = {299},
+  year = {2010},
+  pages = {1--9}
 }
 
 
@@ -8269,37 +8055,36 @@ pages = {1--9}
 }
 
 @article{Jarvis2007,
-title = {Survival times of subducted slab remnants in numerical models
-of mantle flow},
-journal = {Earth and Planetary Science Letters},
-volume = {260},
-number = {1--2},
-pages = {23--36},
-year = {2007},
-note = {},
-issn = {0012-821X},
-url = {http://dx.doi.org/10.1016/j.epsl.2007.05.009},
-author = {Gary T. Jarvis and Julian P. Lowman},
+  title = {Survival times of subducted slab remnants in numerical models
+  of mantle flow},
+  journal = {Earth and Planetary Science Letters},
+  volume = {260},
+  number = {1--2},
+  pages = {23--36},
+  year = {2007},
+  note = {},
+  url = {http://dx.doi.org/10.1016/j.epsl.2007.05.009},
+  author = {Gary T. Jarvis and Julian P. Lowman},
 }
 
 @article{Burke2008,
-title={Plume Generation Zones at the margins of Large Low Shear Velocity
-provinces on the core–mantle boundary},
-author={K. Burke and B. Steinberger and T. H. Torsvik and M. A. Smethurst},
-journal = {Earth and Planetary Science Letters},
-year = {2008},
-volume = {265},
-pages = {49-60}
+  title={Plume Generation Zones at the margins of Large Low Shear Velocity
+  provinces on the core–mantle boundary},
+  author={K. Burke and B. Steinberger and T. H. Torsvik and M. A. Smethurst},
+  journal = {Earth and Planetary Science Letters},
+  year = {2008},
+  volume = {265},
+  pages = {49-60}
 }
 
 @article{vanderMeer2010,
-author={van der Meer, D. G.  and W. Spakman and van Hinsbergen, D. J. J. and
-M. L. Amaru and T. H. Torsvik},
-year=2010,
-title={Towards absolute plate motions constrained by lower-mantle slab remnants},
-journal={Nature Geoscience},
-volume={3},
-pages={36-40}
+  author={van der Meer, D. G.  and W. Spakman and van Hinsbergen, D. J. J. and
+  M. L. Amaru and T. H. Torsvik},
+  year=2010,
+  title={Towards absolute plate motions constrained by lower-mantle slab remnants},
+  journal={Nature Geoscience},
+  volume={3},
+  pages={36-40}
 }
 
 @Article{MontagueKelloggManga1998,
