--- a/backmatter/fdl-1.3.tex
+++ b/backmatter/fdl-1.3.tex
@@ -9,7 +9,7 @@ Copyright \copyright{} 2000, 2001, 2002, 2007, 2008  Free Software Foundation, I
 
 \bigskip
 
- <http://fsf.org/>
+\url{http://fsf.org}
 
 \bigskip
 
