--- a/book.tex
+++ b/book.tex
@@ -35,10 +35,10 @@
 
 %------------------------------------------------------------------------------
 % For testing
-%\fenicsinput{alnes-3}
+\fenicsinput{langtangen}
 %\bibliography{bibliography}
 %\bibliographystyle{abbrvnat}
-%\end{document}
+\end{document}
 
 %------------------------------------------------------------------------------
 % Chapters
