Figure fix reported by Mehdi

--- a/book.tex
+++ b/book.tex
@@ -35,7 +35,7 @@
 
 %------------------------------------------------------------------------------
 % For testing
-\fenicsinput{langtangen}
+\fenicsinput{nikbakht}
 %\bibliography{bibliography}
 %\bibliographystyle{abbrvnat}
 \end{document}
