Minor fix in proofreading script

--- a/book.tex
+++ b/book.tex
@@ -35,10 +35,10 @@
 
 %------------------------------------------------------------------------------
 % For testing
-\fenicsinput{nikbakht}
+%\fenicsinput{langtangen}
 %\bibliography{bibliography}
 %\bibliographystyle{abbrvnat}
-\end{document}
+%\end{document}
 
 %------------------------------------------------------------------------------
 % Chapters
