Move all chapter tex files to common directory. No changes made yet to any of the tex files.

--- a/book.tex
+++ b/book.tex
@@ -43,62 +43,60 @@
 %------------------------------------------------------------------------------
 % Chapters
 
-\fenicsinput{langtangen}
+\input{tex/1}
 
 \part{Methodology}
 
-\fenicsinput{kirby-7}
-\fenicsinput{kirby-6}
-\fenicsinput{kirby-1}
-\fenicsinput{kirby-5}
-\fenicsinput{logg-3}
-\fenicsinput{oelgaard-2}
-\fenicsinput{kirby-8}
-\fenicsinput{kirby-4}
+\input{tex/2}
+\input{tex/3}
+\input{tex/4}
+\input{tex/5}
+\input{tex/6}
+\input{tex/7}
+\input{tex/8}
+\input{tex/9}
 
 \part{Implementation}
 
-\fenicsinput{logg-2}
-\fenicsinput{logg-1}
-\fenicsinput{kirby-3}
-\fenicsinput{kirby-2}
-\fenicsinput{wilbers}
-\fenicsinput{alnes-3}
-\fenicsinput{alnes-2}
-\fenicsinput{alnes-1}
-\fenicsinput{hoffman-2}
-\fenicsinput{mardal-2}
+\input{tex/10}
+\input{tex/11}
+\input{tex/12}
+\input{tex/13}
+\input{tex/14}
+\input{tex/15}
+\input{tex/16}
+\input{tex/17}
+\input{tex/18}
+\input{tex/19}
 
 \part{Applications}
 
 % flow problems
-\fenicsinput{terrel}
-\fenicsinput{kvs-1}
-\fenicsinput{mortensen}
-\fenicsinput{kvs-2}
-\fenicsinput{hentschel}
-\fenicsinput{lopes}
+\input{tex/20}
+\input{tex/21}
+\input{tex/22}
+\input{tex/23}
+\input{tex/24}
+\input{tex/25}
 
 % solid mechanics
-\fenicsinput{oelgaard-1}
-\fenicsinput{narayanan}
+\input{tex/26}
+\input{tex/27}
 
 % fluid-structure interaction
-\fenicsinput{hoffman-1}
-\fenicsinput{selim}
+\input{tex/28}
+\input{tex/29}
 
 % misc applications
-\fenicsinput{nikbakht}
-\fenicsinput{vynnytska}
-\fenicsinput{schroll}
-\fenicsinput{hake}
-\fenicsinput{lezar}
+\input{tex/30}
+\input{tex/31}
+\input{tex/32}
+\input{tex/33}
+\input{tex/34}
 
 % misc techniques
-\fenicsinput{mardal-4}
-\fenicsinput{rognes}
-
-%\fenicsinput{wells}
+\input{tex/35}
+\input{tex/36}
 
 %------------------------------------------------------------------------------
 % Start backmatter
