Update code line with preprocess statement.

--- a/tex/17.tex
+++ b/tex/17.tex
@@ -2461,7 +2461,7 @@ representation, and thus the signature, of a form may change with
 versions of \ufl{}.  The following line prints the signature of a form
 with \emp{expand\_derivatives} and renumbering applied.
 \begin{python}
-print repr(preprocess(myform).form_data().form)
+print repr(preprocess(myform).preprocessed_form)
 \end{python}
 
 %------------------------------------------------------------
