Add Springer Part* files

--- a/book.tex
+++ b/book.tex
@@ -34,19 +34,13 @@
 \mainmatter
 
 %------------------------------------------------------------------------------
-% For testing
-%\fenicsinput{langtangen}
-%\bibliography{bibliography}
-%\bibliographystyle{abbrvnat}
-%\end{document}
-
-%------------------------------------------------------------------------------
 % Chapters
 
+% Tutorial
 \input{tex/1}
 
-\part{Methodology}
-
+% Part I: Methodology
+\input{tex/Part1}
 \input{tex/2}
 \input{tex/3}
 \input{tex/4}
@@ -56,8 +50,8 @@
 \input{tex/8}
 \input{tex/9}
 
-\part{Implementation}
-
+% Part II: Implementation
+\part{tex/Part2}
 \input{tex/10}
 \input{tex/11}
 \input{tex/12}
@@ -69,7 +63,8 @@
 \input{tex/18}
 \input{tex/19}
 
-\part{Applications}
+% Part III: Applications
+\input{tex/Part3}
 
 % flow problems
 \input{tex/20}
