Apply changes to FM1.tex: minor changes

--- a/tex/FM1.tex
+++ b/tex/FM1.tex
@@ -1,11 +1,10 @@
 \tableofcontents
 
-
 \chapter*{Preface}
 
 \thispagestyle{empty}
 
-The FEniCS Project set out in 2003 with the idea to automate the
+The FEniCS Project set out in 2003 with an idea to automate the
 solution of mathematical models based on differential equations.
 Initially, the FEniCS Project consisted of two libraries: DOLFIN and
 FIAT. Since then, the project has grown and now consists of the core
@@ -35,5 +34,4 @@ form of code examples. These code examples can be downloaded from
 
 \noindent
 Anders Logg, Kent-Andre Mardal and Garth N. Wells \\*
-\emph{Oslo and Cambridge, June 2011}
-
+\emph{Oslo and Cambridge, October 2011}
