Apply changes to BM1.tex: corrections in author list acknowledgments

--- a/tex/BM1.tex
+++ b/tex/BM1.tex
@@ -26,7 +26,7 @@
 \fenicsauthor{Stuart R. Clark}
              {stuart@simula.no}
              {Computational Geoscience Department at Simula Research Laboratory, Norway}
-             {This work was funded by a research grant from Statoil.}
+             {This work is funded by a research grant from Statoil.}
              {Chapter \ref{chap:vynnytska}}
 
 \fenicsauthor{David B. Davidson}
@@ -61,10 +61,10 @@
 
 \fenicsauthor{Johan Hake}
              {hake.dev@gmail.com}
-             {Department of Bioengeneering, UCSD, USA\\
+             {Department of Bioengineering, UCSD, USA\\
               Center for Biomedical Computing at Simula Research
               Laboratory, Norway}
-             {This work was supported by the National Biomedical
+             {This work is supported by the National Biomedical
               Computational Resource (NIH grant 5P41RR08605-17).
               This work is also supported by a Center of
               Excellence grant from the Research Council of Norway to
@@ -116,7 +116,7 @@
              {Computation Institute, University of Chicago, Chicago, USA \\
               Department of Molecular Biology and Physiology, Rush University Medical Center, Chicago, USA \\
               Mathematics and Computer Science Division, Argonne National Laboratory, Chicago, USA}
-             {This work was also supported by the Office of Advanced Scientific Computing
+             {This work is supported by the Office of Advanced Scientific Computing
               Research, Office of Science, U.S. Department of Energy, under Contract DE-AC02-06CH11357.}
              {Chapter \ref{chap:terrel}}
 
@@ -124,7 +124,7 @@
              {hpl@simula.no}
              {Center for Biomedical Computing at Simula Research Laboratory, Norway \\
               Department of Informatics, University of Oslo, Norway}
-             {This work is also supported by a Center of Excellence
+             {This work is supported by a Center of Excellence
               grant from the Research Council of Norway to the Center
               for Biomedical Computing at Simula Research
               Laboratory.}
@@ -206,7 +206,10 @@
 \fenicsauthor{Mikael Mortensen}
              {Mikael.Mortensen@ffi.no}
              {Norwegian Defence Research Establishment (FFI), Norway}
-             {}
+             {This work is supported by a Center of Excellence
+              grant from the Research Council of Norway to the Center
+              for Biomedical Computing at Simula Research
+              Laboratory.}
              {Chapters \ref{chap:kvs-1} and \ref{chap:mortensen}}
 
 \fenicsauthor{Harish Narayanan}
@@ -271,8 +274,8 @@
 \fenicsauthor{Hans Joachim Schroll}
              {achim@imada.sdu.dk}
              {Department of Mathematics and Computer Science, University of Southern Denmark, Odense, Denmark}
-             {This work was funded by a research grant from Statoil.
-              The work has been conducted at Simula Research Laboratory, Norway}
+             {This work is funded by a research grant from Statoil.
+              The work has been conducted at Simula Research Laboratory, Norway.}
              {Chapter \ref{chap:schroll}}
 
 \fenicsauthor{L. Ridgway Scott}
@@ -280,7 +283,7 @@
              {Departments of Computer Science and Mathematics,
               Institute for Biophysical Dynamics and the Computation Institute,
               University of Chicago, USA}
-             {This work was supported in part by NSF grant DMS-0920960.}
+             {This work is supported in part by NSF grant DMS-0920960.}
              {Chapter \ref{chap:terrel}}
 
 \fenicsauthor{Kristoffer Selim}
@@ -333,7 +336,7 @@
 \fenicsauthor{Lyudmyla Vynnytska}
              {lyudav@simula.no}
              {Computational Geoscience Department at Simula Research Laboratory, Norway}
-             {This work was funded by a research grant from Statoil.}
+             {This work is funded by a research grant from Statoil.}
              {Chapter \ref{chap:vynnytska}}
 
 \fenicsauthor{Garth N. Wells}
