Fix accents in reference to Certik.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1781,7 +1781,7 @@ pages = {691}
 }
 
 @MISC{CertikSeoanePetersonEtAl2009,
-  author = {O. Certik and F. Seoane and P. Peterson and others},
+  author = {O. \v{C}ert\'{i}k and F. Seoane and P. Peterson and others},
   title = {{sympy}: {Python} library for symbolic mathematics},
   year = {2009},
   owner = {kent-and},
@@ -6769,7 +6769,7 @@ journal = {Proceedings of the Royal Society of London. Series A: Mathematical, P
 }
 
 @MISC{SkavhaugCertik2009,
-  author = {O. Skavhaug and O. Certik},
+  author = {O. Skavhaug and O. \v{C}ert\'{i}k},
   title = {Swiginac {P}ython interface to {GiNaC}},
   year = {2009},
   url = {http://swiginac.berlios.de/}
