Added the additional scalar nonlinear functions.

--- a/tex/17.tex
+++ b/tex/17.tex
@@ -719,6 +719,10 @@ classes are found in Section~\ref{ufl:sec:representation}.
 %\index{**}
 \index{\emp{sin}}
 \index{\emp{cos}}
+\index{\emp{tan}}
+\index{\emp{asin}}
+\index{\emp{acos}}
+\index{\emp{atan}}
 \index{\emp{exp}}
 \index{\emp{ln}}
 \index{\emp{pow}}
@@ -789,7 +793,9 @@ found in the manual.
 
 A set of common elementary functions operating on scalar expressions
 without free indices are included, in particular \emp{abs(f)}, \emp{pow(f,
-g)}, \emp{sqrt(f)}, \emp{exp(f)}, \emp{ln(f)}, \emp{sin(f)}, \emp{cos(f)},
+g)}, \emp{sqrt(f)}, \emp{exp(f)}, \emp{ln(f)},
+\emp{cos(f)}, \emp{sin(f)}, \emp{tan(f)},
+\emp{acos(f)}, \emp{asin(f)}, \emp{atan(f)},
 and \emp{sign(f)}.
 
 %------------------------------------------------------------------------------
