--- a/tex/BM1.tex
+++ b/tex/BM1.tex
@@ -931,9 +931,9 @@ V.~Alfred, R.~Sethi, and D.~U. Jeffrey.
 \newblock \emph{Compilers: Principles, Techniques and Tools}.
 \newblock Addison-Wesley, Reading, Massachusetts, 1986.
 
-\bibitem[Aln\ae{}s et~al.(2007)Aln\ae{}s, Langtangen, Logg, Mardal, and
-  Skavhaug]{AlnaesLangtangenEtAl2007}
-M.~Aln\ae{}s, H.~P. Langtangen, A.~Logg, K.-A. Mardal, and O.~Skavhaug.
+\bibitem[Aln\ae{}s et~al.(2007)Aln\ae{}s, Logg, Mardal,
+  Skavhaug, and Langtangen]{AlnaesLangtangenEtAl2007}
+M.~S. Aln\ae{}s, A.~Logg, K.-A. Mardal, O.~Skavhaug, and H.~P. Langtangen.
 \newblock \emph{{UFC} Specification and User Manual}, 2007.
 \newblock URL \url{http://www.fenicsproject.org}.
 
@@ -959,9 +959,7 @@ M.~S. Aln{\ae}s and K.-A. Mardal.
 M.~S. Aln\ae{}s, A.~Logg, K.-A. Mardal, O.~Skavhaug, and H.~P. Langtangen.
 \newblock Unified framework for finite element assembly.
 \newblock \emph{International Journal of Computational Science and
-  Engineering}, 2009.
-\newblock Accepted for publication. Preprint:
-  \url{http://simula.no/research/scientific/publications/Simula.SC.96}.
+  Engineering}, 4(4):\penalty0 231--244, 2009.
 
 \bibitem[Alperin et~al.(2006)Alperin, Mazda, Lichtor, and
   Lee]{AlperinMazdaLichtorEtAl2006}
@@ -1356,7 +1354,7 @@ F.~Brezzi, J.~Douglas, Jr., and L.~D. Marini.
   Fortin]{BrezziDouglasDuranFortin1987}
 F.~Brezzi, J.~Douglas, R.~Duran, and M.~Fortin.
 \newblock Mixed finite elements for second order elliptic problems in three
-  variable.
+  variables.
 \newblock \emph{Numerische Matematik}, 51:\penalty0 237--250,
   1987{\natexlab{a}}.
 
@@ -1390,7 +1388,7 @@ A.~Buffa, P.~Houston, and I.~Perugia.
   Smethurst]{Burke2008}
 K.~Burke, B.~Steinberger, T.~H. Torsvik, and M.~A. Smethurst.
 \newblock Plume generation zones at the margins of large low shear velocity
-  provinces on the core–mantle boundary.
+  provinces on the core-mantle boundary.
 \newblock \emph{Earth and Planetary Science Letters}, 265:\penalty0 49--60,
   2008.
 
@@ -1725,8 +1723,7 @@ K.~Eriksson and C.~Johnson.
 \bibitem[Eriksson and Johnson(1995{\natexlab{a}})]{ErikssonJohnson1995a}
 K.~Eriksson and C.~Johnson.
 \newblock Adaptive finite element methods for parabolic problems {II}: Optimal
-  error estimates in \$ l\_$\backslash$ infty l\_2\$ and\$ l\_$\backslash$
-  infty l\_$\backslash$ infty\$.
+  error estimates in $l_\infty l_2$ and $l_\infty l_\infty$.
 \newblock \emph{SIAM Journal on Numerical Analysis}, 32:\penalty0 706,
   1995{\natexlab{a}}.
 
@@ -1832,7 +1829,7 @@ M.~D. Ford, N.~Alperin, S.~H. Lee, D.~W. Holdsworth, and D.~A. Steinman.
 L.~Formaggia and F.~Nobile.
 \newblock A stability analysis for the arbitrary {L}agrangian {E}ulerian
   formulation with finite elements.
-\newblock \emph{EAST WEST JOURNAL OF NUMERICAL MATHEMATICS}, 7:\penalty0
+\newblock \emph{East-West Journal of Numerical Mathematics}, 7:\penalty0
   105--132, 1999.
 
 \bibitem[Forth et~al.(2004)Forth, Tadjouddine, Pryce, and
@@ -2045,7 +2042,7 @@ P.~Hansbo and M.~G. Larson.
 
 \bibitem[Hansen and Wollman()]{HansenWollman}
 T.~Hansen and G.~Wollman.
-\newblock Us secure hash algorithm 1 (sha1).
+\newblock US secure hash algorithm 1 (SHA1).
 \newblock URL \url{http://www.apps.ietf.org/rfc/rfc3174.html}.
 
 \bibitem[Hansen and Ebel(1988)]{HansenEbel1988}
@@ -2079,8 +2076,8 @@ J.~D. Heiss, N.~Patronas, H.~L. DeVroom, T.~Shawker, R.~Ennis, W.~Kammerer,
 \bibitem[Hentschel et~al.(2010)Hentschel, Mardal, L{\o}vgren, Linge, and
   Haughton]{HentschelMardalLovgren2010}
 S.~Hentschel, K.-A. Mardal, A.~E. L{\o}vgren, S.~Linge, and V.~Haughton.
-\newblock Characterization of cyclical csf flow in the foramen magnum and upper
-  cervical spinal canal with mr flow imaging and computational fluid dynamics.
+\newblock Characterization of cyclical CSF flow in the foramen magnum and upper
+  cervical spinal canal with MR flow imaging and computational fluid dynamics.
 \newblock \emph{American Journal of Neuroradiology}, 31\penalty0 (6):\penalty0
   997 -- 1002, 2010.
 
@@ -2162,7 +2159,7 @@ R.~Hiptmair.
 \bibitem[Hoffman(2005)]{Hoffman2005}
 J.~Hoffman.
 \newblock Computation of mean drag for bluff body problems using adaptive
-  dns/les.
+  DNS/LES.
 \newblock \emph{SIAM J. Sci. Comput.}, 27\penalty0 (1):\penalty0 184--207,
   2005.
 
@@ -2198,7 +2195,7 @@ J.~Hoffman and C.~Johnson.
 
 \bibitem[Hoffman and Johnson(2008)]{HoffmanJohnson2008b}
 J.~Hoffman and C.~Johnson.
-\newblock Resolution of d'alembert's paradox.
+\newblock Resolution of d'Alembert's paradox.
 \newblock \emph{J. Math. Fluid Mech.}, Online First December 2008, 2008.
 
 \bibitem[Hoffman et~al.(2011)Hoffman, Jansson, and
@@ -2269,7 +2266,7 @@ T.~J.~R. Hughes.
   Balestra]{HughesFrancaBalestra1986}
 T.~J.~R. Hughes, L.~P. Franca, and M.~Balestra.
 \newblock A new finite element formulation for computational fluid dynamics:
-  {V}. {C}ircumventing the {B}abuska-{B}rezzi condition: a stable
+  {V}. {C}ircumventing the {B}abu\v{s}ka-{B}rezzi condition: a stable
   {P}etrov-{G}alerkin formulation of the {S}tokes problem accommodating
   equal-order interpolations.
 \newblock \emph{Computer Methods in Applied Mechanics and Engineering},
@@ -2290,7 +2287,7 @@ J.~D. Humphrey.
 
 \bibitem[Hypre()]{www:hypre}
 Hypre.
-\newblock software package.
+\newblock Software package.
 \newblock URL \url{http://www.llnl.gov/CASC/hypre/}.
 
 \bibitem[Imhof and Sharma(2007)]{ImhofSharma2007}
@@ -2381,7 +2378,7 @@ J.~Jin.
 \bibitem[John and Knobloch(2007)]{JohnKnobloch2007}
 V.~John and P.~Knobloch.
 \newblock On spurious oscillations at layers diminishing ({SOLD}) methods for
-  convection-diffusion equations: {P}art - {A} review.
+  convection-diffusion equations: {P}art I -- {A} review.
 \newblock \emph{Computer Methods in Applied Mechanics and Engineering},
   196\penalty0 (17-20):\penalty0 2197 -- 2215, 2007.
 \newblock URL \url{http://dx.doi.org/10.1016/j.cma.2006.11.013}.
@@ -2996,7 +2993,7 @@ L.~S.~D. Morley.
 \bibitem[Mortensen et~al.(2011{\natexlab{a}})Mortensen, Langtangen, and
   Myre]{Mortensen2011b}
 M.~Mortensen, H.~P. Langtangen, and J.~Myre.
-\newblock cbc.rans -- a new flexible, programmable software framework for
+\newblock CBC.RANS -- a new flexible, programmable software framework for
   computational fluid dynamics.
 \newblock In H.~I. Andersson and B.~Skallerud, editors, \emph{Sixth National
   Conference on Computational Mechanics (MekIT'11)}. Tapir, 2011{\natexlab{a}}.
@@ -3167,7 +3164,7 @@ A.~Peskoff, J.~A. Post, and G.~A. Langer.
 
 \bibitem[PETSc()]{www:petsc}
 PETSc.
-\newblock software package.
+\newblock Software package.
 \newblock URL \url{http://www.anl.gov/petsc}.
 
 \bibitem[Pinna et~al.(2000)Pinna, Alessandrini, Alfieri, Rossi, and
@@ -3424,7 +3421,7 @@ H.~Si.
 
 \bibitem[SILOON()]{Siloon}
 SILOON.
-\newblock {SILOON}, scripting interface languages for object-oriented numerics.
+\newblock Software package.
 \newblock URL \url{http://acts.nersc.gov/siloon/index.html}.
 
 \bibitem[Silvester and Wathen(1993)]{SilvesterWathen1993}
@@ -3630,7 +3627,7 @@ L.~N. Trefethen.
 
 \bibitem[{Trilinos}()]{www:trilinos}
 {Trilinos}.
-\newblock software package.
+\newblock Software package.
 \newblock URL \url{http://trilinos.sandia.gov/}.
 
 \bibitem[Trottenberg et~al.(2001)Trottenberg, Oosterlee, and
@@ -3768,12 +3765,12 @@ Viper.
 
 \bibitem[VMTK()]{www:vmtk}
 VMTK.
-\newblock software package.
+\newblock Software package.
 \newblock URL \url{http://www.vmtk.org}.
 
 \bibitem[VTK()]{www:vtk}
 VTK.
-\newblock software package.
+\newblock Software package.
 \newblock URL \url{http://www.kitware.com}.
 
 \bibitem[Walkley(1999)]{Walkley1999}
