Added mention of elem_op.

--- a/tex/17.tex
+++ b/tex/17.tex
@@ -746,6 +746,7 @@ classes are found in Section~\ref{ufl:sec:representation}.
 \index{\emp{det}}
 \index{\emp{transpose}}
 \index{\emp{inv}}
+\index{\emp{elem\_op}}
 
 \ufl{} defines a comprehensive set of operators that can be used for
 composing expressions.  The elementary algebraic operators \emp{+},
@@ -796,7 +797,8 @@ without free indices are included, in particular \emp{abs(f)}, \emp{pow(f,
 g)}, \emp{sqrt(f)}, \emp{exp(f)}, \emp{ln(f)},
 \emp{cos(f)}, \emp{sin(f)}, \emp{tan(f)},
 \emp{acos(f)}, \emp{asin(f)}, \emp{atan(f)},
-and \emp{sign(f)}.
+and \emp{sign(f)}. Any operator taking scalar arguments can be applied
+element-wise to tensors using e.g. \emp{elem\_op(sin, A)}.
 
 %------------------------------------------------------------------------------
 \subsection{Differential operators} \label{ufl:sec:differential}
