Added logical operators And,Or,Not to list.

--- a/tex/17.tex
+++ b/tex/17.tex
@@ -959,11 +959,14 @@ The condition can be one of
 \item \emp{lt(a, b)} $\leftrightarrow$ $(a < b)$
 \item \emp{le(a, b)} $\leftrightarrow$ $(a \le b)$
 \item \emp{eq(a, b)} $\leftrightarrow$ $(a = b)$
+\item \emp{And(P, Q)} $\leftrightarrow$ $(P \land Q)$
+\item \emp{Not(P)} $\leftrightarrow$ $(\lnot P)$
 \end{itemize}
 \begin{itemize}
 \item \emp{gt(a, b)} $\leftrightarrow$ $(a > b)$
 \item \emp{ge(a, b)} $\leftrightarrow$ $(a \ge b)$
 \item \emp{ne(a, b)} $\leftrightarrow$ $(a \ne b)$
+\item \emp{Or(P, Q)} $\leftrightarrow$ $(P \lor Q)$
 \end{itemize}
 \end{multicols}}
 
