--- a/tex/17.tex
+++ b/tex/17.tex
@@ -1089,10 +1089,12 @@ in this framework, in particular arbitrary mixed elements are supported.
 \label{ufl:sec:adjoint}
 
 Another form operator is the adjoint $a^*$ of a bilinear form $a$,
-defined as $a^*(u,v) = a(v,u)$, which is similar to taking the transpose
+defined as $a^*(v,u) = a(u,v)$, which is equivalent to taking the transpose
 of the assembled sparse matrix.  In \ufl{} this is implemented simply
-by swapping the test and trial functions, and can be written using the
-\emp{adjoint} form operator.  An example of its use on an anisotropic
+by swapping the order of the test and trial functions, and can be written using the
+\emp{adjoint} form operator.
+(Note that this is not the most generic definition of the adjoint of an operator).
+An example of its use on an anisotropic
 diffusion term looks like
 \begin{uflcode}
 V = VectorElement("Lagrange", cell, 1)
@@ -1103,10 +1105,10 @@ M = Coefficient(T)
 a = M[i,j]*u[k].dx(j)*v[k].dx(i)*dx
 astar = adjoint(a)
 \end{uflcode}
-which corresponds to
+which corresponds to (with $u \in U$ and $v \in V$)
 \begin{align}
-a(M; u, v) = \int_\Omega M_{ij} u_{k,j} v_{k,i} \dx, \\
-a^*(M; u, v) = a(M; v, u) = \int_\Omega  M_{ij} v_{k,j} u_{k,i} \dx.
+a(M; u, v) =& \int_\Omega M_{ij} u_{k,j} v_{k,i} \dx, \\
+a^*(M; v, u) =& \int_\Omega  M_{ij} u_{k,j} v_{k,i} \dx = a(M; u, v).
 \end{align}
 This automatic transformation is particularly useful if we need the
 adjoint of nonsymmetric bilinear forms computed using
